--- a/Front-end_Tiennh21/Assignment/layout/HomePage.html
+++ b/Front-end_Tiennh21/Assignment/layout/HomePage.html
@@ -1,83 +1,215 @@
 <style>
     @media only screen and (min-width: 1400px) {
-        .img-header>img{float: left}
+        .img-header>img {
+            float: left
+        }
     }
+
     @media only screen and (max-width: 330px) {
-        img{display: none}
-        .img-header{
+        img {
+            display: none
+        }
+
+        .img-header {
             display: none
         }
 
     }
-
 </style>
 
 
-<div class="container" ng-controller="myCtrl">
+<div class="container" ng-controller="myRegisterCtrl">
     <div class="row mt-5">
         <div class="col-xs-12 col-lg-8 mt-5 img-header ">
             <img width="65%" class="image-responsive img-fluid mx-auto d-block" src="images/imagePic/coder_HomePage.png"
                 alt="">
         </div>
         <div class="col-xs-12 col-lg-4 wrap-form-head-register mt-5" id="register">
-            <div class="container">
-                <h4 class="mt-3 mb-4">Start now</h4>
-                <div class="mt-3 ">
-                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Username">
-                </div>
-                <div class="mt-3 ">
-                    <input type="password" class="form-control" id="exampleFormControlInput1" placeholder="Password">
-                </div>
+            <div class="container" ng-init="studentRegister.gender = 'true'; studentRegister.marks = '0'">
+                <form name="formRegister" novalidate>
+                    <h4 class="mt-3 mb-4">Start now</h4>
+                    <div class="mt-3 ">
+                        <input ng-model="studentRegister.username" name="username" type="text" class="form-control"
+                            id="exampleFormControlInput1" placeholder="Username" minlength="5" required>
+                        <div ng-hide="formRegister.username.$untouched ||formRegister.username.$valid">
+                            <small ng-show="formRegister.username.$error.required" class="text-danger fst-italic">
+                                Username không để trống
+                            </small>
+                            <small ng-show="formRegister.username.$error.minlength" class="text-danger fst-italic">
+                                Username trên 5 ký tự
+                            </small>
+                        </div>
+                    </div>
+                    <!-- <div class="mt-3 ">
+                        <input ng-model="studentRegister.password" name="password" type="password" class="form-control"
+                            id="exampleFormControlInput1" placeholder="Password" minlength="6" required>
 
-                <div class="mt-3 ">
-                    <input type="password" class="form-control" id="exampleFormControlInput1"
-                        placeholder="Confirm Password">
-                </div>
-                <div class="mt-3 ">
-                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Fullname">
-                </div>
-                <div class="mt-3 ">
-                    <input type="email" class="form-control" id="exampleFormControlInput1"
-                        placeholder="email@example.com">
-                </div>
-                <div class="mt-3 ">
-                    <input type="date" class="form-control" id="exampleFormControlInput1" placeholder="dd/MM/yyyy">
-                </div>
-                <div class="mt-3 ">
-                    <label for="exampleFormControlInput1" class="form-label">Gender</label>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                        <label class="form-check-label" for="flexRadioDefault1">
-                            Male
-                        </label>
+                        <div ng-hide="formRegister.password.$untouched ||formRegister.password.$valid">
+                            <small ng-show="formRegister.password.$error.required" class="text-danger fst-italic">
+                                Password không để trống
+                            </small>
+                            <small ng-show="formRegister.password.$error.minlength" class="text-danger fst-italic">
+                                Password trên 6 ký tự
+                            </small>
+                        </div>
                     </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2"
-                            checked>
-                        <label class="form-check-label" for="flexRadioDefault2">
-                            Felmale
-                        </label>
-                    </div>
-                </div>
 
-                <div class="mt-3 ">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-                        <label class="form-check-label" for="flexCheckIndeterminate">
-                            I agree to Polylearn Terms of use
-                        </label>
-                    </div>
-                </div>
+                    <div class="mt-3 ">
+                        <input ng-model="repassword" name="repassword" type="password" class="form-control"
+                            placeholder="Confirm Password" required>
+                        <div ng-hide="formRegister.repassword.$untouched ||formRegister.repassword.$valid">
+                            <small ng-show="formRegister.repassword.$error.required" class="text-danger fst-italic">
+                                Pasword không để trống
+                            </small>
+                            <small ng-show="formRegister.repassword.$invalid && !formRegister.repassword.$error.required" class="text-danger fst-italic">
+                                Mật khẩu không khớp
+                            </small>
+                        </div>
+                    </div> -->
 
-                <div class="row mt-4 mb-4">
-                    <div class="col-lg-12 d-flex justify-content-center">
-                        <button class="btn btn-primary justify-content-center col-12">
-                            Start Now
-                        </button>
+                    <div class="mt-3">
+
+                        <div class="fieldset"
+                            ng-class="{'has-error':studentRegister.password.$invalid && !studentRegister.password.$pristine}">
+                            <input class="form-control" type="password" id="password" name="password"
+                                ng-model="studentRegister.password" ng-minlength="8" ng-maxlength="20"
+                                ng-pattern="/(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z])/" placeholder="Password" required />
+
+                            <!-- <p ng-show="formRegister.password.$error.required" class="error">*</p> -->
+                            <p ng-show="formRegister.password.$error.minlength" class="text-danger fst-italic">
+                                Passwords must be between 8 and 20 characters.</p>
+                            <p ng-show="formRegister.password.$error.pattern" class="text-danger fst-italic">
+                                Must contain one lower &amp; uppercase letter, and one non-alpha character (a number or
+                                a
+                                symbol.)</p>
+                        </div>
                     </div>
-                </div>
+
+                    <div class="mt-3">
+
+                        <div class="fieldset"
+                            ng-class="{'has-error':studentRegister.password_c.$invalid && !studentRegister.password_c.$pristine}">
+                            <input class="form-control" type="password" id="password_c" name="password_c"
+                                ng-model="studentRegister.password_c" placeholder="Confirm password"
+                                valid-password-c="studentRegister.password" required />
+
+                            <p ng-show="formRegister.password_c.$error.noMatch" class="text-danger fst-italic">Passwords
+                                do not
+                                match.</span>
+                                <!-- <p ng-show="formRegister.password_c.$error.required" class="error">*</p> -->
+                        </div>
+                    </div>
+
+                    <div class="mt-3 ">
+                        <input ng-model="studentRegister.fullname" name="fullname" type="text" class="form-control"
+                            id="exampleFormControlInput1" placeholder="Fullname" required minlength="5">
+                        <div ng-hide="formRegister.fullname.$untouched ||formRegister.fullname.$valid">
+                            <small ng-show="formRegister.fullname.$error.required" class="text-danger fst-italic">
+                                Fullname không để trống
+                            </small>
+                            <small ng-show="formRegister.fullname.$error.minlength" class="text-danger fst-italic">
+                                Fullname không dưới 5 ký tự
+                            </small>
+                        </div>
+
+                    </div>
+                    <div class="mt-3 ">
+                        <input ng-model="studentRegister.email" name="email" type="email" class="form-control"
+                            id="exampleFormControlInput1" placeholder="email@example.com" required>
+
+                        <div ng-hide="formRegister.email.$untouched || formRegister.email.$valid">
+                            <small class="text-danger fst-italic" ng-show="formRegister.email.$error.required">Email
+                                Không được để
+                                trống</small>
+                            <small class="text-danger fst-italic" ng-show="formRegister.email.$error.email">Email không
+                                đúng định dạng</small>
+                        </div>
+                    </div>
+                    <div class="mt-3 ">
+                        <input ng-model="studentRegister.birthday" name="birthday" type="text" class="form-control"
+                            id="exampleFormControlInput1" placeholder="Ngày sinh (yyyy-mm-dd)"
+                            pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" required>
+
+                        <div ng-hide="formRegister.email.$untouched || formRegister.email.$valid">
+                            <small ng-show="formRegister.birthday.$error.required" class="fst-italic text-danger">Vui
+                                lòng
+                                nhập ngày sinh</small>
+                            <small ng-show="formRegister.birthday.$error.pattern" class="fst-italic text-danger">Không
+                                đúng
+                                định dạng ngày sinh</small>
+                        </div>
+                    </div>
+
+                    <div class="mt-3">
+                        <input ng-model="studentRegister.schoolfee" name="schoolfee" type="number" class="form-control"
+                            id="exampleFormControlInput1" placeholder="Schoolfee" min="2000000" required>
+
+                        <div ng-hide="formRegister.schoolfee.$untouched || formRegister.schoolfee.$valid">
+                            <small ng-show="formRegister.schoolfee.$error.required" id="schoolfee"
+                                class="fst-italic text-danger">Vui lòng nhập học phí</small>
+                            <small ng-show="formRegister.schoolfee.$error.min" id="schoolfee"
+                                class="fst-italic text-danger">Học phí phải hơn 2 triệu</small>
+                        </div>
+                    </div>
+                    <div class="mt-3 ">
+                        <label for="exampleFormControlInput1" class="form-label">Gender</label>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1"
+                                value="true">
+                            <label class="form-check-label" for="flexRadioDefault1">
+                                Male
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2"
+                                checked value="false">
+                            <label class="form-check-label" for="flexRadioDefault2">
+                                Felmale
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="mt-3 ">
+                        <div class="form-check">
+                            <input name="checkBox" ng-model="chkselct" class="form-check-input" type="checkbox" value=""
+                                id="flexCheckIndeterminate" required>
+                            <label class="form-check-label" for="flexCheckIndeterminate">
+                                I agree to Polylearn Terms of use
+                            </label>
+                            <small ng-show="validationmsg" id="schoolfee" class="fst-italic text-danger">Bạn có đồng ý
+                                không ?</small>
+                        </div>
+
+                    </div>
+
+                    <div class="row mt-4 mb-4">
+                        <div class="col-lg-12 d-flex justify-content-center">
+                            <button value="submit" class="btn btn-primary justify-content-center col-12"
+                                ng-click="register()" ng-disabled="formRegister.$invalid">
+                                Start Now
+                            </button>
+                        </div>
+                    </div>
+                </form>
+
             </div>
         </div>
     </div>
+
+    <script>
+        // var app = angular.module('myapp', ['UserValidation']);
+
+        // angular.module('UserValidation', []).directive('validPasswordC', function () {
+        //     return {
+        //         require: 'ngModel',
+        //         link: function (scope, elm, attrs, ctrl) {
+        //             ctrl.$parsers.unshift(function (viewValue, $scope) {
+        //                 var noMatch = viewValue != scope.formRegister.password.$viewValue
+        //                 ctrl.$setValidity('noMatch', !noMatch)
+        //             })
+        //         }
+        //     }
+        // })
+    </script>
 
 </div>
