--- a/Front-end_Tiennh21/Assignment/layout/demo.html
+++ b/Front-end_Tiennh21/Assignment/layout/demo.html
@@ -10,96 +10,79 @@
     <!-- Bootstrap CSS v5.0.2 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 
 </head>
 
 <body>
-    <div class="container mt-5">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown link
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-        <!-- <button class="btn btn-primary" type="button" data-bs-target="#myModal" data-bs-toggle="modal">
-            OP
-        </button>
+    <div ng-app="myapp">
+        <form name="myForm">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" ng-model="formData.email" required />
+            <span ng-show="myForm.email.$error.required && myForm.email.$dirty">required</span>
+            <span ng-show="!myForm.email.$error.required && myForm.email.$error.email && myForm.email.$dirty">invalid
+                email</span>
+            <br />
+            <label for="email">Name</label>
+            <input type="text" id="name" name="name" ng-model="formData.name" required />
+            <span ng-show="myForm.name.$error.required && myForm.name.$dirty">required</span>
+            <br />
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" ng-model="formData.username" ng-minlength="5"
+                ng-maxlength="20" ng-pattern="/^[A-z][A-z0-9]*$/" required />
+            <span ng-show="myForm.username.$error.required && myForm.username.$dirty">required</span>
+            <span
+                ng-show="!myForm.username.$error.minLength && !myForm.username.$error.maxLength && myForm.username.$error.pattern && myForm.username.$dirty">Must
+                start with a letter, and contain letters &amp; numbers only.</span>
+            <span
+                ng-show="!myForm.username.$error.required && (myForm.username.$error.minlength || myForm.username.$error.maxlength) && myForm.username.$dirty">Username
+                ust be between 5 and 20 characters.</span>
+            <br />
 
-        <div class="modal" id="myModal">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header bg-light">
-                        <h5 class="model-title">First Name</h5>
-                        <button class="btn-close" type="button" data-bs-dismiss="modal"></button>
-                    </div>
-                    <div class="modal-body">
-                        <label for="message" class="form-label">Message</label>
-                        <textarea name="" id="" cols="30" rows="10" class="form-control"></textarea>
-                    </div>
-                    <div class="modal-footer">
-                        <button class="btn btn-primary" type="button"
-                        
-                        data-bs-dismiss="modal" data-bs-target="#myModal_2" data-bs-toggle="modal"
-                        >
-                            Submit
-                        </button>
 
-                        <button class="btn btn-danger" type="button" data-bs-dismiss="modal">
-                            Cancel
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" ng-model="formData.password" ng-minlength="8"
+                ng-maxlength="20" ng-pattern="/(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z])/" required />
+            <span ng-show="myForm.password.$error.required && myForm.password.$dirty">required</span>
+            <span
+                ng-show="!myForm.password.$error.required && (myForm.password.$error.minlength || myForm.password.$error.maxlength) && myForm.password.$dirty">Passwords
+                must be between 8 and 20 characters.</span>
+            <span
+                ng-show="!myForm.password.$error.required && !myForm.password.$error.minlength && !myForm.password.$error.maxlength && myForm.password.$error.pattern && myForm.password.$dirty">Must
+                contain one lower &amp; uppercase letter, and one non-alpha character (a number or a symbol.)</span>
+            <br />
 
-        <div class="modal" id="myModal_2">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header alert alert-info">
-                        <h5 class="model-title">So 2</h5>
-                        <button class="btn-close" type="button" data-bs-dismiss="modal"></button>
-                    </div>
-                    <div class="modal-body">
-                        <p>lorem ipsum dolor sit am</p>
-                    </div>
-                    <div class="modal-footer">
-                        <button class="btn btn-primary" type="button">
-                            Submit
-                        </button>
 
-                        <button class="btn btn-danger" type="button" data-bs-dismiss="modal">
-                            Cancel
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div> -->
+            <label for="password_c">Confirm Password</label>
+            <input type="password" id="password_c" name="password_c" ng-model="formData.password_c" valid-password-c
+                required />
+            <span ng-show="myForm.password_c.$error.required && myForm.password_c.$dirty">Please confirm your
+                password.</span>
+            <span
+                ng-show="!myForm.password_c.$error.required && myForm.password_c.$error.noMatch && myForm.password.$dirty">Passwords
+                do not match.</span>
+            <br />
+
+            <button type="submit" class="btn" ng-disabled="!myForm.$valid">Submit</button>
+        </form>
     </div>
+
+
+    <script>
+        var app = angular.module('myapp', ['UserValidation']);
+
+        angular.module('UserValidation', []).directive('validPasswordC', function () {
+            return {
+                require: 'ngModel',
+                link: function (scope, elm, attrs, ctrl) {
+                    ctrl.$parsers.unshift(function (viewValue, $scope) {
+                        var noMatch = viewValue != scope.myForm.password.$viewValue
+                        ctrl.$setValidity('noMatch', !noMatch)
+                    })
+                }
+            }
+        })
+    </script>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
